<resources>
    <string name="app_name">Remembrall</string>
    <string name="TaskDeletedMessage">Task Removed from list</string>
    <string name="title_activity_locations_list">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_task_list">Tasks List</string>
    <string name="title_activity_task_map_container">Remembrall</string>
    <string name="pref_title_notifications">Notification Setting</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="notification_activity">Notification</string>
    <string name="premium">Get Premium Account</string>
    <string name="NewTask">New Task</string>
    <string name="TaskTitle">Task Title</string>
    <string name="AddMore">Add More</string>
    <string name="location">Location</string>
    <string name="Remember">Remember</string>
    <string name="priority">Priority</string>
    <string name="title_main_activity">Add Task</string>
    <string name="tasks_lsit">Tasks List</string>
    <string name="tasks_list">Tasks List</string>
    <string name="Profile">Profile</string>
    <string name="AddNewTask">Add New Task</string>
    <string name="GoToTaskList">Task List</string>
    <string name="SendTask">Send Task</string>
    <string name="WhatDoYouWantToDo">What would you like to do?</string>
    <string name="MoreSettings">More Settings</string>
    <string name="duration">time</string>


</resources>
