<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.i303390.remembrall.MainActivity">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/WhatDoYouWantToDo"
                android:textSize="12pt"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption">
            </TextView>
            <EditText
                android:id="@+id/EditTextName"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:layout_width="match_parent">
            </EditText>
            <TextView
                android:id="@+id/priorityLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/priority"
                android:layout_marginTop="5dp"
                android:textSize="8pt"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"></TextView>
        <Spinner
            android:id="@+id/TaskPriority"
            android:layout_height="match_parent"
            android:prompt="@string/priority"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:entries="@array/PriorityTypelist">
        </Spinner>
            <TextView  android:id="@+id/help_title_gest"
                android:text="@string/MoreSettings"
                android:clickable="true"
                android:textSize="8pt"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:onClick="toggle_contents"/>
            <!--content to hide/show begin-->
            <EditText
                android:id="@+id/location"
                android:layout_height="match_parent"
                android:hint="@string/location"
                android:layout_marginTop="5dp"
                android:inputType="textAutoComplete"
                android:layout_marginStart="12dp"
                android:layout_width="match_parent">
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:id="@+id/duration"
                android:hint="@string/duration"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp" />

            <!--content to hide/show end-->

            <Button
                android:id="@+id/ButtonSendFeedback"
                android:layout_height="match_parent"
                android:text="@string/Remember"
                android:onClick="addtask"
                android:layout_width="match_parent"
                android:elevation="0dp">
            </Button>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
